<resources>
    <string name="app_name" translatable="false">woodpecker</string>
    <string name="tap" translatable="false">tap</string>
    <string name="back">back</string>
    <string name="settings_general">General</string>
    <string name="settings_game">Game</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="MC_select">Morse Code Standard</string>
    <string name="language_select">Language</string>
    <string name="cheat_sheet">Cheat Sheet</string>
    <string name="title_activity_cheat_sheet" translatable="false">CheatSheetActivity</string>
    <string name="editor">Editor</string>
    <string name="new_mc">new</string>
    <string name="delete_mc">delete</string>
    <string name="select_mc">select</string>
    <string name="menu" translatable="false">menu</string>
    <string name="cancel">cancel</string>
    <string name="save">save</string>
    <string name="edit_mc">Edit Morse Character</string>
    <string name="edit_rep">Edit Rep</string>
    <string name="edit_seq">Edit Sequence</string>
    <string name="invalid_input">Invalid Input</string>
    <string name="add_char" translatable="false">+</string>
    <string name="add_new_morse_char">Add New Morse Char</string>
    <string name="enter_character">Character</string>
    <string name="duplicated_entry">Duplicated Entry</string>
    <string name="enter_morse_code">Sequence</string>
    <string name="char_added">Char Added</string>
    <string name="delete_title">Delete</string>
    <string name="char_deleted">Char Deleted</string>
    <string name="edit_del">Delete</string>
    <string name="theme_select">Theme</string>
    <string name="error_empty_name">Estandarra ezin da hutsik egon!</string>
    <string name="ok_new_std">New standard created!</string>
    <string name="error_std_exists">Standard already exists!</string>
    <string name="msg_create_mc">Create New Morse Code</string>
    <string name="error_no_stds">No standards available!</string>
    <string name="msg_select_std_del">Select a standard to delete</string>
    <string name="error_one_std">At least one standard must remain</string>
    <string name="msg_confirm_del">Confirm Delete</string>
    <string name="msg_are_you_sure">Are you sure you want to delete</string>
    <string name="error_std_404">Standard doesn\'t exist</string>
    <string name="ok_std_deleted">Standard deleted!</string>
    <string name="msg_select_std_edit">Select a standard to edit</string>
    <string name="ok_updated">updated!</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="not_word_of_the_day">Word of the Day!</string>
</resources>